# TRIC

./: Cargo.toml  README.md
.github/workflows/: release.yml
release/manual/server/: 01-installation.md  02-configuration.md
src/: lib.rs  main.rs  store.rs
src/core/: data_bus.rs  mod.rs  module.rs
src/modules/: cli.rs  export.rs  mod.rs  placeholder.rs  server.rs
tests/: benchmark_test.rs  server_integration_test.rs
